UPDATE : event detail 페이지 연결

--- a/schedules/templates/schedules/events_list.html
+++ b/schedules/templates/schedules/events_list.html
@@ -57,7 +57,7 @@
                                         {% for event in object_list %}
                                             <tr role="row" class="odd">
                                                 <td class="sorting_1">{{ forloop.counter }}</td>
-                                                <td>{{ event.title }}</td>
+                                                <td><a href="{% url 'schedules:event-detail' event.pk %}">{{ event.title }}</a></td>
                                                 <td>{{ event.start_time }}</td>
                                                 <td>{{ event.end_time }}</td>
                                             </tr>
