--- a/schedules/templates/schedules/dashboard.html
+++ b/schedules/templates/schedules/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css %}
-  <link href="{% static 'css/cal.css' %}" rel="stylesheet"/>
+  <link href="{% static 'css/main.css' %}" rel="stylesheet"/>
 {% endblock css %}
 
 {% block content %}
