--- a/schedules/templates/schedules/event.html
+++ b/schedules/templates/schedules/event.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-  <link href="{% static 'css/cal.css' %}" rel="stylesheet"/>
+  <link href="{% static 'css/main.css' %}" rel="stylesheet"/>
 {% endblock css %}
 {% block content %}
 <div class="clearfix">
