--- a/walkings/templates/walkings/test.html
+++ b/walkings/templates/walkings/test.html
@@ -48,7 +48,7 @@
           <h6 class="card-subtitle mb-2 text-muted">인원수: {{ dogr.join.count }}/{{dogr.membercnt}}</h6>
           <p class="card-text">{{dogr.user.username}}</p>
           <p class="card-text">{{dogr.dog.name}}</p>
-          {% if request.uesr.is_authenticated %}
+          {% if request.user.is_authenticated %}
             {% if dogr.user != request.user %}
               {% if request.user in dogr.join.all  %}
                 <a href="{% url 'walkings:join' dogr.pk %}" class="btn btn-warning card-link">취소하기</a>
@@ -75,16 +75,14 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
 
-  var pos_latitude = 0.0
-  let pos_longtitude = 0
+  var pos_latitude = 0
+  var pos_longtitude = 0
   // 현재 위치 받아오기
   function getLocation() {
     if (navigator.geolocation) { // GPS를 지원하면
       navigator.geolocation.getCurrentPosition(function(position) {
-        //alert(position.coords.latitude + ' ' + position.coords.longitude);
         pos_latitude = position.coords.latitude
         pos_longtitude = position.coords.longitude
-        return pos_latitude
       }, function(error) {
         console.error(error);
       }, {
@@ -95,17 +93,14 @@
     } else {
       alert('GPS를 지원하지 않습니다');
     }
-    return pos_latitude
   }
-
-  getLocation()
-console.log(getLocation())
+getLocation()
 
   const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
 //------------------------------------지도 기본 설정--------------------------------------------
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div
   mapOption = {
-    center: new kakao.maps.LatLng(37.512511, 126.939645), // 지도의 중심좌표
+    center: new kakao.maps.LatLng(pos_latitude, pos_longtitude), // 지도의 중심좌표
     level: 5 // 지도의 확대 레벨
   };
 
